--- a/views/login.pug
+++ b/views/login.pug
@@ -5,6 +5,7 @@ block content
         .col-6.col-xs-12.offset-sm-3
             h1 Log In
             form(action="/login", method="POST")
+                input(type="text", name="_csrf", value=csrf, hidden)
                 .form-group
                     label(for="email") Email:
                     input.form-control(type="text" id="email" placeholder="email" name="email")
